<resources>
    <string name="app_name">笑面男</string>
    <!--Global-->
    <string name="g_back_pressed_exit">再按一次返回键退出程序</string>
    <string name="g_multi_view_data_empty">暂无数据</string>
    <string name="g_multi_view_retry">重试</string>
    <string name="g_multi_view_error">数据加载出错</string>
    <string name="g_multi_view_loading">加载中&#8230;</string>
    <string name="g_click_to_finish">再按一次退出</string>
    <string name="g_click_to_sign_in">点击登录</string>
    <!--Home-->
    <string name="tab_movie">电影</string>
    <string name="tab_daily">日报</string>
    <string name="tab_girls">美图</string>
    <string name="tab_mine">一个</string>
    <string name="alert_title">你好</string>
    <string name="alert_message">登录功能需要Google组件，你确认你已经上梯子了吗？</string>
    <!--Nav-->
    <string name="nav_blog">博客</string>


    <!--Moive-->
    <string name="movie_hot">热映</string>
    <string name="movie_coming_soon">即将上映</string>
    <string name="movie_classics">Top250</string>
    <string name="movie_director">导演:%1$s</string>
    <string name="movie_tag">标签:%1$s</string>
    <string name="movie_top_title">%1$s</string>
    <string name="movie_rank">No.%1$d</string>
    <string name="movie_douban">豆瓣评分:</string>
    <string name="movie_douban_2">豆瓣评分</string>
    <string name="movie_summary">简介</string>
    <string name="movie_original_title">原名:</string>
    <string name="movie_rating_pepole">%1$d人</string>
    <string name="movie_casts">影人</string>
    <string name="movie_director2">导演</string>
    <string name="movie_review">影评:%1$d条</string>


    <!--Girl-->
    <string name="girl_formate_not_allow">格式不支持</string>
    <string name="girl_success">保存成功</string>

    <!--我的-->
    <string name="mine_reward">打赏开发者:</string>
    <string name="mine_more">后续更多功能开发中&#8230;</string>
    <string name="one_photo">摄影|</string>

    <!--设置-->
    <string name="setting_update_avatar">点击修改头像</string>
    <string name="setting_nick">昵称</string>
    <string name="setting_sing_out">退出登录</string>
    <string name="title_activity_ok_http_test">OkHttpTestActivity</string>
</resources>
