<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_avatar_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10"
        android:text="@string/setting_update_avatar"
        android:textSize="@dimen/sp_12"
        app:layout_constraintEnd_toEndOf="@+id/iv_avatar"
        app:layout_constraintStart_toStartOf="@+id/iv_avatar"
        app:layout_constraintTop_toBottomOf="@+id/iv_avatar" />

    <TextView
        android:id="@+id/tv_nick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_40"
        android:layout_marginTop="@dimen/dimen_40"
        android:text="@string/setting_nick"
        android:textSize="@dimen/sp_14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_avatar_hint" />

    <EditText
        android:id="@+id/et_nick"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_40"
        android:layout_marginRight="@dimen/dimen_40"
        android:background="@null"
        android:textColor="@color/color_000000"
        android:textSize="@dimen/sp_14"
        app:layout_constraintBottom_toBottomOf="@+id/tv_nick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_nick"
        app:layout_constraintTop_toTopOf="@+id/tv_nick" />


    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="@dimen/dimen_40"
        android:layout_marginLeft="@dimen/dimen_40"
        android:textColor="@color/color_ffffff"
        android:text="@string/setting_sing_out"
        android:layout_marginBottom="@dimen/dimen_40"
        android:backgroundTint="@color/fui_bgEmail"/>

</android.support.constraint.ConstraintLayout>